--- a/styles.css
+++ b/styles.css
@@ -109,17 +109,17 @@ p{
 
     body{
         background-image: url("./images/bg-desktop.svg");
+        background-size: cover;
     }
     
     main{
         text-align: left;
-        padding: 0 4rem;
         margin: 2rem 2rem 0 2rem;
         position:absolute;
-        top: 50%;
+        bottom: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
-        background-image:
+        transform: translate(-50%, 50%);
+        width: 95%;
     }
 
     .container{
@@ -131,7 +131,8 @@ p{
     }
 
     .logo{
-        margin-bottom: 4rem;
+        margin-bottom: 8rem;
+        max-width: 15rem;;
     }
 
     .text{
@@ -141,7 +142,7 @@ p{
 
     h1{
         font-size: 2rem;
-        padding: 0 6rem 0 0;
+        padding: 0 3rem 0 0;
     }
 
     p{
@@ -158,7 +159,7 @@ p{
 
     .social-media{
         position: absolute;
-        bottom: 0;
-        right: 0;
+        bottom: 1rem;
+        right: 0rem;
     }
 }
